@@ -17,5 +17,6 @@ importFrom(globals,findGlobals)
 importFrom(iterators,iter)
 importFrom(parallel,splitIndices)
 importFrom(utils,capture.output)
+importFrom(utils,head)
 importFrom(utils,packageVersion)
 importFrom(utils,str)
