@@ -51,6 +51,10 @@ SOFTWARE QUALITY:
 
 BUG FIXES:
 
+ o If the 'doFuture' package is missing on a worker, an error on
+   'length(results) == nbr_of_elements is not TRUE' would be produced.
+   Now a more informative error is produced.
+
  o foreach(..., .export) with '.export' containing "..." would produce an
    error when using globals (<= 0.11.0).
 
